# utils

./: .gitignore  OAT.xml  bundle.json  ohos.build
dmabufheap/: BUILD.gn  ohos.build
dmabufheap/include/: dmabuf_alloc.h
dmabufheap/src/: dmabuf_alloc.c
native/: bundle.json
native/base/: BUILD.gn  include  src
native/lite/: BUILD.gn  hals  include  memory
native/lite/file/: BUILD.gn
native/lite/js/builtin/: BUILD.gn
native/lite/kal/timer/: BUILD.gn  include
native/lite/timer_task/: BUILD.gn  include
system/safwk/native/include/: system_ability_definition.h  system_ability_definition.h~
