# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Please don not use module in this file any more. The source code has been
# moved to "//commonlibrary/c_utils".
import("//build/ohos.gni")

###############################################################################
config("utils_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//developtools/liblog",
  ]
  cflags = []
  if (current_os == "mingw") {
    cflags += [ "-Wno-error=inconsistent-dllimport" ]
  }
}

config("private_securec_config") {
  cflags = [ "-Wno-implicit-fallthrough" ]
}

config("static_utils_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//developtools/liblog",
  ]
}

utils_native_visibility_list = [
  "//applications/standard/settings/napi/settings:*",
  "//base/telephony/cellular_data/test/unit_test:*",
  "//base/customization/enterprise_device_management/*:*",
  "//base/update/*:*",
  "//base/telephony/core_service/*:*",
  "//base/telephony/data_storage/*:*",
  "//base/msdp/*:*",
  "//base/security/*:*",
  "//base/hiviewdfx/*:*",
  "//commonlibrary/ets_utils/*:*",
  "//device/soc/*:*",
  "//device/board/isoftstone/*:*",
  "//drivers/peripheral/*:*",
  "//developtools/profiler/host/smartperf/trace_streamer/test:*",
  "//foundation/ability/ability_runtime/*:*",
  "//foundation/ai/*:*",
  "//foundation/filemanagement/*:*",
  "//foundation/resourceschedule/*:*",
  "//foundation/barrierfree/accessibility/frameworks/acfwk/test:*",
  "//foundation/multimedia/*:*",
  "//foundation/communication/dsoftbus/*:*",
  "//foundation/communication/netmanager_base/*:*",
  "//foundation/communication/netmanager_ext/*:*",
  "//foundation/distributeddatamgr/preferences/*:*",
  "//foundation/arkui/napi/*:*",
  "//foundation/arkui/ace_engine/frameworks/core/components/text_overlay:*",
  "//foundation/arkui/ace_engine/adapter/ohos/services/uiservice/uiservice_plugins/uiservice_dialog:*",
  "//foundation/graphic/*:*",
  "//foundation/window/window_manager/utils:*",
  "//foundation/multimodalinput/input/frameworks/napi/input_device_cooperate:*",
  "//third_party/flutter/build/skia/ohos:*",
  "//test/xts/*:*",
  "//test/arkXtest/uitest:*",
  "//test/developertest/aw/cxx/distributed:*",
  "//vendor/*:*",
  "//out/*:*",
]

group("utilsbase") {
  visibility = utils_native_visibility_list
  public_deps = [ "//commonlibrary/c_utils/base:utilsbase" ]
}

group("utils") {
  visibility = utils_native_visibility_list
  public_deps = [ "//commonlibrary/c_utils/base:utils" ]
}

group("utilsecurec") {
  visibility = [ "//foundation/arkui/ace_engine/*:*" ]
  public_deps = [ "//commonlibrary/c_utils/base:utilsecurec" ]
}
###############################################################################
