# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Please don not use module in this file any more. The source code has been
# moved to "//commonlibrary/c_utils".
import("//build/ohos.gni")

###############################################################################
config("utils_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//developtools/liblog",
  ]
  cflags = []
  if (current_os == "mingw") {
    cflags += [ "-Wno-error=inconsistent-dllimport" ]
  }
}

config("private_securec_config") {
  cflags = [ "-Wno-implicit-fallthrough" ]
}

config("static_utils_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//developtools/liblog",
  ]
}

utils_native_visibility_list = [
  "//base/update/*:*",
  "//base/msdp/*:*",
  "//base/security/*:*",
  "//base/hiviewdfx/*:*",
  "//device/soc/*:*",
  "//device/board/isoftstone/*:*",
  "//drivers/peripheral/*:*",
  "//foundation/filemanagement/*:*",
  "//foundation/multimedia/*:*",
  "//foundation/communication/dsoftbus/*:*",
  "//third_party/flutter/build/skia/ohos:*",
  "//test/xts/*:*",
  "//vendor/*:*",
  "//out/*:*",
]

group("utilsbase") {
  visibility = utils_native_visibility_list
  public_deps = [ "//commonlibrary/c_utils/base:utilsbase" ]
}

group("utils") {
  visibility = utils_native_visibility_list
  public_deps = [ "//commonlibrary/c_utils/base:utils" ]
}

group("utilsecurec") {
  visibility = [ "//foundation/arkui/ace_engine/*:*" ]
  public_deps = [ "//commonlibrary/c_utils/base:utilsecurec" ]
}
###############################################################################
